// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Encharge's createUpdateObject destination action: all fields 1`] = `
Object {
  "objectType": "r%3l9EB#Tn!sbzcr#",
  "properties": Object {
    "externalId": "r%3l9EB#Tn!sbzcr#",
    "id": "r%3l9EB#Tn!sbzcr#",
    "testType": "r%3l9EB#Tn!sbzcr#",
  },
  "type": "group",
  "user": Object {
    "email": "tatodu@ful.yt",
    "userId": "r%3l9EB#Tn!sbzcr#",
  },
}
`;

exports[`Testing snapshot for Encharge's createUpdateObject destination action: all fields 2`] = `"{\\"type\\":\\"group\\",\\"objectType\\":\\"r%3l9EB#Tn!sbzcr#\\",\\"properties\\":{\\"testType\\":\\"r%3l9EB#Tn!sbzcr#\\",\\"externalId\\":\\"r%3l9EB#Tn!sbzcr#\\",\\"id\\":\\"r%3l9EB#Tn!sbzcr#\\"},\\"user\\":{\\"email\\":\\"tatodu@ful.yt\\",\\"userId\\":\\"r%3l9EB#Tn!sbzcr#\\"}}"`;

exports[`Testing snapshot for Encharge's createUpdateObject destination action: required fields 1`] = `
Object {
  "objectType": "r%3l9EB#Tn!sbzcr#",
  "properties": Object {
    "id": "r%3l9EB#Tn!sbzcr#",
  },
  "type": "group",
  "user": Object {},
}
`;

exports[`Testing snapshot for Encharge's createUpdateObject destination action: required fields 2`] = `"{\\"type\\":\\"group\\",\\"objectType\\":\\"r%3l9EB#Tn!sbzcr#\\",\\"properties\\":{\\"id\\":\\"r%3l9EB#Tn!sbzcr#\\"},\\"user\\":{}}"`;

exports[`Testing snapshot for Encharge's createUpdateObject destination action: required fields 3`] = `
Headers {
  Symbol(map): Object {
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
    "x-encharge-token": Array [
      "r%3l9EB#Tn!sbzcr#",
    ],
    "x-segment-actions": Array [
      "1",
    ],
  },
}
`;
